--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 
 members = [
+    "common",
     "pallets/ares-oracle",
     "pallets/oracle-finance",
     "pallets/staking-extend",
@@ -13,6 +14,6 @@ members = [
 #    "pallets/session/benchmarking",
 ]
 
-[patch."https://github.com/paritytech/substrate"]
+[patch."https://github.com/zzm-Zhong/substrate"]
 pallet-session ={path = "./pallets/session" }
 pallet-session-benchmarking ={path = "./pallets/session/benchmarking" }
