--- a/pallets/member-extend/Cargo.toml
+++ b/pallets/member-extend/Cargo.toml
@@ -19,6 +19,7 @@ lite-json = { version = "0.1", default-features = false }
 log = { version = "0.4.14", default-features = false }
 serde = { version = '1.0.130', default-features = false, features = ['derive'] }
 serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 
 frame-support = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.13-fix" }
 frame-system = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.13-fix" }
