--- a/pallets/oracle-finance/Cargo.toml
+++ b/pallets/oracle-finance/Cargo.toml
@@ -14,6 +14,7 @@ targets = ['x86_64-unknown-linux-gnu']
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
 hex = { version = "0.4", default-features = false }
+log = { version = "0.4.14", default-features = false }
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 
 frame-support = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
@@ -24,12 +25,14 @@ sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", default-features 
 sp-core = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
 sp-application-crypto = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
 sp-std = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
-
 pallet-balances = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
+pallet-session = { path = "../session", default-features = false, features = ["historical"] }
 
 [dev-dependencies]
 serde = { version = '1.0.130', default-features = false, features = ['derive'] }
 serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
+pallet-timestamp = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, branch = "polkadot-v0.9.15-fix" }
+
 
 [features]
 default = ['std']
@@ -40,9 +43,11 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'frame-benchmarking/std',
+    'pallet-session/std',
     'sp-application-crypto/std',
     'pallet-balances/std',
     'sp-core/std',
+    "log/std",
     'hex/std',
 ]
 try-runtime = ['frame-support/try-runtime']
