Add pallet-session-benchmarking v4.0.0-dev to Cargo members.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
     "pallets/collective",
     "pallets/price-estimates",
     "pallets/session",
-#    "pallets/session/benchmarking",
+    "pallets/session/benchmarking",
 ]
 
 [patch."https://github.com/paritytech/substrate"]
