update pallet_session path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ members = [
     "pallets/session/benchmarking",
 ]
 
-[patch."https://github.com/paritytech/substrate"]
-pallet-session ={path = "./pallets/session" }
-pallet-session-benchmarking ={path = "./pallets/session/benchmarking" }
+#[patch."https://github.com/paritytech/substrate"]
+#pallet-session ={path = "./pallets/session" }
+#pallet-session-benchmarking ={path = "./pallets/session/benchmarking" }
