Add rpc tools for Ares-Oracle.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "pallets/challenge",
     "pallets/collective",
     "pallets/price-estimates",
+    "rpc/ares-rpc",
 ]
 
 #[patch."https://github.com/paritytech/substrate"]
