--- a/rpc/ares-rpc/Cargo.toml
+++ b/rpc/ares-rpc/Cargo.toml
@@ -11,7 +11,7 @@ version = '1.0.0'
 targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
-ares-oracle-provider-support = { path = "../../../ares-ocw-suit/pallets/ares-oracle-provider-support" }
+ares-oracle-provider-support = { path = "../../pallets/ares-oracle-provider-support" }
 codec = { package = "parity-scale-codec", version = "2.0.0" }
 chrono = "0.4"
 serde = { version = "1.0.136", features = ["derive"] }
