--- a/pallets/ares-oracle/Cargo.toml
+++ b/pallets/ares-oracle/Cargo.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+bound-vec-helper = { default-features = false, path = "../../tools/bound-vec-helper" }
 hex = { version = "0.4", default-features = false }
 lite-json = { version = "0.1", default-features = false }
 log = { version = "0.4.14", default-features = false }
@@ -52,6 +53,7 @@ sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-f
 default = ["std"]
 
 std = [
+    "bound-vec-helper/std",
     "sp-application-crypto/std",
     "codec/std",
     "frame-support/std",
