--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "pallets/staking-extend",
     "pallets/challenge",
     "pallets/price-estimates",
+    "pallets/price-estimates3",
     "pallets/manual-bridge",
     "rpc/ares-rpc",
     "tools/seed-reader",
